<resources>
    <string name="app_name">Moviles_BG2M</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toolbar_title_home">PC-BUDGET</string>
    <string name="toolbar_title_products">Productos</string>
    <string name="toolbar_title_budget">Presupuesto</string>
    <string name="toolbar_title_more">Más</string>


    <string name="Components_text">Tus Componentes:</string>
    <string name="title_processor">Tu Procesador:</string>
    <string name="add_processor">Añadir procesador</string>
    <string name="title_graphic_card">Tu tarjeta grafica:</string>
    <string name="agregar_procesador_icono">agregar procesador icono</string>
    <string name="añadir_procesador">Añadir Procesador</string>
    <string name="tu_memoria_ram">Tu memoria RAM:</string>
    <string name="añadir_TG">Añadir tarjeta grafica</string>
    <string name="añadir_ram">Añadir memoria ram</string>
    <string name="añadir_TM">Añadir tarjeta madre</string>
    <string name="title_MB">Tu tarjeta madre:</string>
    <string name="tu_almacenamiento">Tu almacenamiento:</string>
    <string name="añadir_almacenamiento">Añadir almacenamiento</string>
    <string name="tu_fuente_de_poder">Tu fuente de poder:</string>
    <string name="añadir_fuente_de_poder">Añadir fuente de poder</string>
    <string name="tu_gabinete">Tu gabinete:</string>
    <string name="añadir_case">Añadir gabinete</string>
    <string name="total_btn_text">Total</string>
    <string name="Guardar_boton">Guardar</string>
    <string name="built_computer">Computadoras Completas</string>
    <string name="built_your_own_pc">"O arma tu propia computadora "</string>
    <string name="processor">Procesadores</string>
    <string name="video_card">Tarjetas de Video</string>
    <string name="memories">Memorias</string>
    <string name="motherboards">Tarjetas Madre</string>
    <string name="storage">Almacenamiento</string>
    <string name="cases">Gabinetes</string>
    <string name="power_supply">Fuentes de Poder</string>
    <string name="create_account_text">Create account</string>
    <string name="inicio">Inicio</string>
    <string name="Productos">Productos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="mas">Más</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="Objetivo_completo">Facilitar la busqueda de productos, generando presupuestos a través del mercado real, para satisfacer las necesidades del cliente, conectando con centros de compra externos</string>
    <string name="no_tienes_ning_n_presupuesto_guardado">No tienes ningún presupuesto guardado</string>
    <string name="price_cpu_text">Precio: 299.95</string>
    <string name="name_text_cpu">Intel Xeon E3-1230 Processors BX80677E31230V6</string>
    <string name="name_grafica">GIGABYTE N105TD5 DDR5 4GB GTX 1050</string>
    <string name="price_grafica">Precio: $371.95</string>
    <string name="text_ram">CORSAIR VENGEANCE RGB - (16GB, 2x8GB) DDR4 2666 MHz</string>
    <string name="price_ram">Precio: $89.99</string>
    <string name="name_tm">Gigabyte B450M DS3H (AMD Ryzen AM4/M.2/HMDI/DVI/USB 3.1/DDR4/Micro ATX/Placa madre)</string>
    <string name="titulo_cuenta">Cuenta</string>
    <string name="cambiar_contra_tv">Cambiar contraseña</string>
    <string name="titulo_nosotros">Nosotros</string>
    <string name="objetivo">Objetivo</string>
    <string name="acerca_de">Acerca de</string>
    <string name="quienes_somos">¿Quienes somos?</string>
    <string name="redes_sociales_y_contacto">Redes Sociales y Contacto</string>
    <string name="telefono_2220_3456">Telefono: 2220–3456</string>
    <string name="twitter_pc_budget_bg2m">Twitter: PC-BUDGET(BG2M)</string>
    <string name="pc_budget_bg2m">PC-BUDGET(BG2M)</string>
    <string name="email_bg2m_group_gmail_com">Email: BG2M-GROUP@gmail.com</string>
    <string name="cerrar_sesion_txt_btn">Cerrar sesión</string>
    <string name="cambiar_btnText">Cambiar</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="indicacion_contraseña">¡Por favor, ingresa tu contraseña actual y despues tu nueva contraseña y confirmala, luego presiona el boton cambiar y listo!</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_nueva_contrasena">Confirmar nueva contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrate">¡Registrate!</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="confirme_su_correo_electronico">Confirme su correo electronico</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="componentes_juntos">Gigabyte B450M DS3H (AMD Ryzen AM4/M.2/HMDI/DVI/USB 3.1/DDR4/Micro ATX/Placa madre)
        ,GIGABYTE N105TD5 DDR5 4GB GTX 1050
        CORSAIR VENGEANCE RGB - (16GB, 2x8GB) DDR4 2666 MHz,
    Intel Xeon E3-1230 Processors BX80677E31230V6</string>
    <string name="precio">761.89$</string>


</resources>
