<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CategoriesFragment">

        <Button
            android:id="@+id/buttn_videocard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/videocard_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/video_card"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_memories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_processor" />

        <Button
            android:id="@+id/built_pc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/pc_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/built_computer"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/build_pc_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/build_pc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_wide"
            android:text="@string/built_your_own_pc"
            app:layout_constraintBottom_toTopOf="@+id/button_processor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/built_pc_button" />

        <Button
            android:id="@+id/button_processor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/procesador_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/processor"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttn_videocard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/build_pc_text" />

        <Button
            android:id="@+id/button_memories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/ram_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/memories"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_motherboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttn_videocard" />

        <Button
            android:id="@+id/button_motherboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/ram_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/motherboards"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_storage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_memories" />

        <Button
            android:id="@+id/button_storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/ram_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/storage"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_case"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_motherboard" />

        <Button
            android:id="@+id/button_power_supply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/ram_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/cases"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_case" />

        <Button
            android:id="@+id/button_case"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:drawableStart="@drawable/ram_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/power_supply"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_power_supply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_storage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>