<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.mauricio.moviles_bg2m.productsFragment"
        android:label="@string/Productos"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/budgetFragment"
        android:name="com.mauricio.moviles_bg2m.BudgetFragment"
        android:label="@string/presupuesto"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.mauricio.moviles_bg2m.MoreFragment"
        android:label="@string/mas"
        tools:layout="@layout/fragment_more">
        <action
            android:id="@+id/action_moreFragment_to_cambiopasswordFragment"
            app:destination="@id/cambiopasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mauricio.moviles_bg2m.loginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.mauricio.moviles_bg2m.SignupFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signupFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mauricio.moviles_bg2m.HomeFragment"
        android:label="Inicio"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/cambiopasswordFragment"
        android:name="com.mauricio.moviles_bg2m.cambiopasswordFragment"
        android:label="fragment_cambiopassword"
        tools:layout="@layout/fragment_cambiopassword" />
    <fragment
        android:id="@+id/categories_almacenamiento"
        android:name="com.mauricio.moviles_bg2m.Categories_almacenamiento"
        android:label="Almacenamiento"
        tools:layout="@layout/fragment_categories_almacenamiento" />
    <fragment
        android:id="@+id/categories_Tarj_video"
        android:name="com.mauricio.moviles_bg2m.Categories_Tarj_video"
        android:label="TarjetaVideo"
        tools:layout="@layout/fragment_categories__tarj_video" />
    <fragment
        android:id="@+id/categories_Tarj_Madre"
        android:name="com.mauricio.moviles_bg2m.Categories_Tarj_Madre"
        android:label="TarjetaMadre"
        tools:layout="@layout/fragment_categories__tarj__madre" />
    <fragment
        android:id="@+id/categories_Procesadores"
        android:name="com.mauricio.moviles_bg2m.Categories_Procesadores"
        android:label="Procesadores"
        tools:layout="@layout/fragment_categories__procesadores" />
    <fragment
        android:id="@+id/categories_Memorias"
        android:name="com.mauricio.moviles_bg2m.Categories_Memorias"
        android:label="Memorias"
        tools:layout="@layout/fragment_categories__memorias" />
    <fragment
        android:id="@+id/categories_Gabinetes"
        android:name="com.mauricio.moviles_bg2m.Categories_Gabinetes"
        android:label="Gabinetes"
        tools:layout="@layout/fragment_categories__gabinetes" />
    <fragment
        android:id="@+id/categories_Fuentes_Poder"
        android:name="com.mauricio.moviles_bg2m.Categories_Fuentes_Poder"
        android:label="FuentesPoder"
        tools:layout="@layout/fragment_categories__fuentes__poder" />
</navigation>